fixed padding, removed scroll to top button on mobile

--- a/styles/sass/partials/_about.scss
+++ b/styles/sass/partials/_about.scss
@@ -52,6 +52,10 @@
             width: 100%;
             margin-top: 3%;
         }
+
+        @include mobile {
+            padding: 5%;
+        }
     }
 
     .button {
