--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -19,6 +19,10 @@
         align-items: center;
     }
 
+    @include mobile {
+        padding: 5%;
+    }
+
 
 
     &:last-child {
@@ -33,6 +37,10 @@
         @include small-tablet {
             width: 80%;
         }
+
+        @include mobile {
+            width: 100%;
+        }
     }
 
     .project-text {
@@ -43,6 +51,10 @@
             width: 80%;
             padding: 0;
             margin-top: 2%;
+        }
+
+        @include mobile {
+            width: 100%;
         }
     }
 
